# scapegrace

./: CLAUDE.md  Cargo.toml  Info.plist  README.md  icon.icns  justfile  mcp_player.py
.github/workflows/: release.yml
Scapegrace.xcodeproj/: project.pbxproj
Scapegrace.xcodeproj/project.xcworkspace/xcuserdata/rturk.xcuserdatad/: UserInterfaceState.xcuserstate
Scapegrace.xcodeproj/xcshareddata/xcschemes/: Scapegrace.xcscheme
Scapegrace.xcodeproj/xcuserdata/rturk.xcuserdatad/xcschemes/: xcschememanagement.plist
appimage/: build-appimage.sh  scapegrace.desktop
assets/: icon_16.rgba  icon_32.rgba  icon_64.rgba
src/: game.rs  gen.rs  main.rs  maps.rs  sfx.rs
static/: index.html
