[package]
name = "scapegrace"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rand = "0.8"
dotenvy = "0.15"
rodio = "0.19"
arboard = "3"

[package.metadata.bundle]
name = "Scapegrace"
identifier = "com.allmuddy.scapegrace"
icon = ["icon.png"]
category = "public.app-category.games"
short_description = "LLM-generated roguelike"
copyright = "Copyright 2024 allmuddy"
